# slate

./: .gitignore  .travis.yml  README  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  slate.py
src/slate/: __init__.py  classes.py  conftest.py  slate.py  test_slate.py  unittests.py  utils.py
src/slate3k/: __init__.py  classes.py  test_slate.py  unittests.py
tests/: test_slate.py  unittests.py
